@@ -110,7 +110,7 @@ module NewRelic
         end
 
         def add(attributes, key, value)
-          return unless value
+          return if value.nil?
 
           if exceeds_bytesize_limit?(value, VALUE_LIMIT)
             value = slice(value)
